src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
.env-overview-container {
    grid-template-columns: 250px 1fr;
    height: calc(100vh - 78px);
    background: linear-gradient(249deg, #d4e6f7 0%, var(--N50) 50.58%);

    .app-deployments-info-wrapper {
        border-radius: 4px;
        background-color: white;
        border: 1px solid var(--N200, #edf1f5);

        .app-deployments-info-header,
        .app-deployments-info-row {
            grid-template-columns: 268px 130px 200px 1fr;
            column-gap: 16px;
            grid-auto-rows: 36px;
            transition: grid-template-columns 0.4s ease-out;

            &.last-deployed-expanded {
                grid-template-columns: 268px 130px 330px 1fr;
            }

            .app-deployment-info-row-leftsection {
                grid-template-columns: 20px 16px 200px;
                column-gap: 16px;
            }
        }

    }

    .response-list-container {
        max-height: calc(100vh - 120px);

        .response-row {
            display: grid;
            grid-template-columns: repeat(2, 200px) auto;
            grid-column-gap: 16px;

            &.is-virtual {
                grid-template-columns: repeat(2, 200px) auto 103px;
            }
        }
    }
}

.checkbox {
    display: inline-block;
    height: 20px;
    width: 30px;
    background-color: #fff;
    border: 1px solid #ccc;
    border-radius: 3px;
}

.temp {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

.sticky-column {
    left: 0px;
    z-index: 3;
}

